--- a/Matematikkboka 1IM.ipynb
+++ b/Matematikkboka 1IM.ipynb
@@ -3,19 +3,25 @@
   {
    "cell_type": "markdown",
    "id": "af44daa3-f013-4a55-a892-a730af741085",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# $\\color{red}{\\text{Kapittel 1 - Grunnleggende regning}}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2524aa2d-e744-4a0a-902d-e736028557c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.13.7 (tags/v3.13.7:bcee1c3, Aug 14 2025, 14:15:11) [MSC v.1944 64 bit (AMD64)]\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "print(sys.version)"
@@ -503,19 +509,62 @@
   {
    "cell_type": "markdown",
    "id": "6e41a217-be3e-4347-ba20-acf49b86e1b7",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Prosentregning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "10ac05cc-c6fb-4936-9c49-07c1810250c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Velkommen til kalkulatoren for: Del av tallet = (Hele tallet ∙ Prosenten) / 100\n",
+      "Trykk 'q' når som helst for å avslutte programmet og trykk enter.\n",
+      "\n",
+      "Hva ønsker du å beregne?\n",
+      "1: Hele tallet\n",
+      "2: Prosent\n",
+      "3: Del av tallet\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Skriv inn nummeret på det du ønsker å beregne (1, 2, eller 3):  1\n",
+      "Skriv inn prosentverdien:  20\n",
+      "Skriv inn del av hele tallet:  300\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hele tallet er: 1500.00\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Skriv inn nummeret på det du ønsker å beregne (1, 2, eller 3):  q\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avslutter programmet. Ha en fin dag!\n"
+     ]
+    }
+   ],
    "source": [
     "# Regel 1. Del av tallet = (Hele tallet ∙ Prosenten) / 100\n",
     "def beregn_hele_tallet(prosent, kroner):\n",
@@ -765,82 +814,242 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1 Grunnleggende regning: 1.7 Prosentvis endring\n",
-    "# Regel 3. Ny verdi = Opprinnelig verdi * Vekstfaktor\n",
-    "import sys  # for exit() hvis ønskelig\n",
+    "#  Arne 4 (Forbedret). Ny verdi = Opprinnelig verdi * Vekstfaktor^n hvor n er tiden + løsning av en ukjent i formelen = ett tall \n",
+    "import math\n",
     "\n",
-    "def beregn_verdi(opprinnelig_verdi=None, vekstfaktor=None, ny_verdi=None):\n",
-    "    if opprinnelig_verdi is not None and vekstfaktor is not None:\n",
-    "        return opprinnelig_verdi * vekstfaktor\n",
-    "    elif ny_verdi is not None and vekstfaktor is not None:\n",
-    "        return ny_verdi / vekstfaktor\n",
-    "    elif ny_verdi is not None and opprinnelig_verdi is not None:\n",
-    "        return ny_verdi / opprinnelig_verdi\n",
-    "    else:\n",
+    "# Ny funksjon for å håndtere input med komma og matematiske uttrykk\n",
+    "def eval_input(prompt):\n",
+    "    svar = input(prompt)\n",
+    "    if svar.lower() == 'q':\n",
+    "        print(\"Du valgte å avslutte programmet.\")\n",
     "        return None\n",
-    "\n",
-    "def få_input(prompt):\n",
-    "    verdi_input = input(prompt)\n",
-    "    if verdi_input.strip().lower() == 'q':\n",
-    "        print(\"Programmet avsluttes.\")\n",
-    "        return None\n",
+    "    \n",
+    "    # Erstatt komma med punktum for desimaltall\n",
+    "    svar_renset = svar.replace(',', '.')\n",
+    "    \n",
     "    try:\n",
-    "        return float(verdi_input)\n",
-    "    except ValueError:\n",
-    "        print(\"Ugyldig tall. Prøv igjen.\")\n",
-    "        return få_input(prompt)\n",
+    "        # Prøv å evaluere strengen som et matematisk uttrykk\n",
+    "        # Hvis det er f.eks. \"2+3\", blir det 5. Hvis det er \"5\", blir det 5.0\n",
+    "        # Hvis det er \"x\", vil eval feile og vi returnerer \"x\"\n",
+    "        return eval(svar_renset)\n",
+    "    except (SyntaxError, NameError):\n",
+    "        # Hvis eval feiler (f.eks. ved 'x' eller annen tekst), returnerer vi den rensede strengen\n",
+    "        return svar_renset\n",
     "\n",
-    "def hovedprogram():\n",
-    "    print(\"Velkommen til kalkulatoren for:  Ny verdi = Opprinnelig verdi * Vekstfaktor\")\n",
-    "    print(\"Formel: Ny verdi = Opprinnelig verdi * Vekstfaktor\")\n",
-    "    print(\"Skriv 'q' for å avslutte og trykk enter.\\n\")\n",
+    "# Oppdatert funksjon for ren tekstinput (f.eks. 'a', 'm', 'q', 'x')\n",
+    "def spør_tekst(prompt):\n",
+    "    svar = input(prompt)\n",
+    "    if svar.lower() == 'q':\n",
+    "        print(\"Du valgte å avslutte programmet.\")\n",
+    "        return None\n",
+    "    return svar\n",
     "\n",
-    "    print(\"Hva vil du finne?\")\n",
-    "    print(\"1: Ny verdi\")\n",
-    "    print(\"2: Opprinnelig verdi\")\n",
-    "    print(\"3: Vekstfaktor\")\n",
+    "def main():\n",
+    "    print(\"Dette programmet regner ut den nye verdien på et tall som skal øke eller minke med en viss prosent over tid.\")\n",
+    "    print(\"Du kan skrive 'q' når som helst for å avslutte programmet.\")\n",
+    "    print(\"Du kan også skrive matematiske uttrykk som '2*5+3' eller '10/2' eller '2**3' der tall forventes.\\n\")\n",
     "\n",
-    "    valg = input(\"Skriv 1, 2 eller 3: \").strip()\n",
-    "    if valg.lower() == 'q':\n",
-    "        print(\"Programmet avsluttes.\")\n",
+    "    svar = spør_tekst(\"Dersom tallet skal øke, skriv 'a'. Dersom tallet skal minke, skriv 'm': \")\n",
+    "    if svar is None:\n",
+    "        return\n",
+    "    svar = svar.lower()\n",
+    "    while svar not in ['a', 'm']:\n",
+    "        print(\"Du skrev inn verken 'a' eller 'm'.\")\n",
+    "        svar = spør_tekst(\"Dersom tallet skal øke, skriv 'a'. Dersom tallet skal minke, skriv 'm': \")\n",
+    "        if svar is None:\n",
+    "            return\n",
+    "        svar = svar.lower()\n",
+    "\n",
+    "    valg = spør_tekst(\"Vil du beregne ny verdi (n), gammel verdi (g), vekstfaktor (v), tid (t) eller løse for en ukjent verdi (x)? \")\n",
+    "    if valg is None:\n",
+    "        return\n",
+    "    valg = valg.lower()\n",
+    "\n",
+    "    if valg == \"n\":\n",
+    "        beregn_ny_verdi(svar)\n",
+    "    elif valg == \"g\":\n",
+    "        beregn_gammel_verdi(svar)\n",
+    "    elif valg == \"v\":\n",
+    "        beregn_vekstfaktor(svar)\n",
+    "    elif valg == \"t\":\n",
+    "        beregn_tid(svar)\n",
+    "    elif valg == \"x\":\n",
+    "        løs_ukjent(svar)\n",
+    "    else:\n",
+    "        print(\"Ugyldig valg\")\n",
+    "\n",
+    "def beregn_ny_verdi(svar_okning_minking):\n",
+    "    tall_input = eval_input(\"Skriv inn den opprinnelige verdien: \")\n",
+    "    if tall_input is None: return\n",
+    "    prosent_input = eval_input(\"Skriv inn prosenten tallet skal endres med (f.eks. '5' for 5%, '2.5' for 2,5%): \")\n",
+    "    if prosent_input is None: return\n",
+    "    tid_input = eval_input(\"Skriv inn tiden i antall år: \")\n",
+    "    if tid_input is None: return\n",
+    "\n",
+    "    try:\n",
+    "        tall = float(tall_input)\n",
+    "        prosent = float(prosent_input)\n",
+    "        tid = float(tid_input)\n",
+    "        \n",
+    "        vekstfaktor = 1 + prosent / 100 if svar_okning_minking == \"a\" else 1 - prosent / 100\n",
+    "        ny_verdi = tall * (vekstfaktor ** tid)\n",
+    "        print(f\"Den nye verdien etter {tid:.2f} år er {ny_verdi:.2f}\")\n",
+    "    except (ValueError, TypeError):\n",
+    "        print(\"Ugyldig input. Sørg for å skrive inn gyldige tall eller matematiske uttrykk.\")\n",
+    "\n",
+    "def beregn_gammel_verdi(svar_okning_minking):\n",
+    "    ny_verdi_input = eval_input(\"Skriv inn den nye verdien: \")\n",
+    "    if ny_verdi_input is None: return\n",
+    "    prosent_input = eval_input(\"Skriv inn prosenten tallet skal endres med: \")\n",
+    "    if prosent_input is None: return\n",
+    "    tid_input = eval_input(\"Skriv inn tiden i antall år: \")\n",
+    "    if tid_input is None: return\n",
+    "\n",
+    "    try:\n",
+    "        ny_verdi = float(ny_verdi_input)\n",
+    "        prosent = float(prosent_input)\n",
+    "        tid = float(tid_input)\n",
+    "        \n",
+    "        vekstfaktor = 1 + prosent / 100 if svar_okning_minking == \"a\" else 1 - prosent / 100\n",
+    "        gammel_verdi = ny_verdi / (vekstfaktor ** tid)\n",
+    "        print(f\"Den opprinnelige verdien var {gammel_verdi:.2f}\")\n",
+    "    except (ValueError, TypeError):\n",
+    "        print(\"Ugyldig input. Sørg for å skrive inn gyldige tall eller matematiske uttrykk.\")\n",
+    "\n",
+    "def beregn_vekstfaktor(svar_okning_minking):\n",
+    "    gammel_verdi_input = eval_input(\"Skriv inn den opprinnelige verdien: \")\n",
+    "    if gammel_verdi_input is None: return\n",
+    "    ny_verdi_input = eval_input(\"Skriv inn den nye verdien: \")\n",
+    "    if ny_verdi_input is None: return\n",
+    "    tid_input = eval_input(\"Skriv inn tiden i antall år: \")\n",
+    "    if tid_input is None: return\n",
+    "\n",
+    "    try:\n",
+    "        gammel_verdi = float(gammel_verdi_input)\n",
+    "        ny_verdi = float(ny_verdi_input)\n",
+    "        tid = float(tid_input)\n",
+    "        \n",
+    "        vekstfaktor = (ny_verdi / gammel_verdi) ** (1 / tid)\n",
+    "        prosent = (vekstfaktor - 1) * 100 if svar_okning_minking == \"a\" else (1 - vekstfaktor) * 100\n",
+    "        print(f\"Vekstfaktoren er {vekstfaktor:.4f}, som tilsvarer en prosentvis endring på {prosent:.2f}%\")\n",
+    "    except (ValueError, TypeError, ZeroDivisionError):\n",
+    "        print(\"Ugyldig input. Sørg for å skrive inn gyldige tall eller matematiske uttrykk. Sjekk også for null-divisjon.\")\n",
+    "\n",
+    "def beregn_tid(svar_okning_minking):\n",
+    "    gammel_verdi_input = eval_input(\"Skriv inn den opprinnelige verdien: \")\n",
+    "    if gammel_verdi_input is None: return\n",
+    "    ny_verdi_input = eval_input(\"Skriv inn den nye verdien: \")\n",
+    "    if ny_verdi_input is None: return\n",
+    "    prosent_input = eval_input(\"Skriv inn prosenten tallet skal endres med: \")\n",
+    "    if prosent_input is None: return\n",
+    "\n",
+    "    try:\n",
+    "        gammel_verdi = float(gammel_verdi_input)\n",
+    "        ny_verdi = float(ny_verdi_input)\n",
+    "        prosent = float(prosent_input)\n",
+    "        \n",
+    "        vekstfaktor = 1 + prosent / 100 if svar_okning_minking == \"a\" else 1 - prosent / 100\n",
+    "        \n",
+    "        if vekstfaktor <= 0: # Kan ikke ta logaritmen av et negativt tall eller 0\n",
+    "            print(\"Ugyldig vekstfaktor for tidsberegning. Vekstfaktoren må være større enn 0.\")\n",
+    "            return\n",
+    "        if (ny_verdi / gammel_verdi) <= 0: # Kan ikke ta logaritmen av et negativt tall eller 0\n",
+    "            print(\"Ugyldig forhold mellom ny og gammel verdi for tidsberegning. Forholdet må være større enn 0.\")\n",
+    "            return\n",
+    "\n",
+    "        tid = math.log(ny_verdi / gammel_verdi) / math.log(vekstfaktor)\n",
+    "        print(f\"Tiden det tar for verdien å endres fra {gammel_verdi:.2f} til {ny_verdi:.2f} er {tid:.2f} år\")\n",
+    "    except (ValueError, TypeError, ZeroDivisionError):\n",
+    "        print(\"Ugyldig input. Sørg for å skrive inn gyldige tall eller matematiske uttrykk. Sjekk også for null-divisjon.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Det oppstod en uventet feil: {e}\")\n",
+    "\n",
+    "def løs_ukjent(svar_okning_minking):\n",
+    "    print(\"\\nSkriv inn verdiene for tre av variablene. Skriv 'x' for den ukjente.\")\n",
+    "    print(\"Du kan også skrive matematiske uttrykk som '2*5+3' eller '10/2' eller '2**3' der tall forventes.\")\n",
+    "\n",
+    "    prosent_eller_vekst = spør_tekst(\"Vil du bruke prosent (p) eller vekstfaktor (v)? \")\n",
+    "    if prosent_eller_vekst is None:\n",
+    "        return\n",
+    "    prosent_eller_vekst = prosent_eller_vekst.lower()\n",
+    "    while prosent_eller_vekst not in ['p', 'v']:\n",
+    "        prosent_eller_vekst = spør_tekst(\"Ugyldig valg. Skriv 'p' for prosent eller 'v' for vekstfaktor: \")\n",
+    "        if prosent_eller_vekst is None:\n",
+    "            return\n",
+    "        prosent_eller_vekst = prosent_eller_vekst.lower()\n",
+    "\n",
+    "    n_input = eval_input(\"Ny verdi (skriv 'x' for ukjent): \")\n",
+    "    if n_input is None: return\n",
+    "    g_input = eval_input(\"Opprinnelig verdi (skriv 'x' for ukjent): \")\n",
+    "    if g_input is None: return\n",
+    "    faktor_input = eval_input(\"Prosent/vekstfaktor (skriv 'x' for ukjent): \")\n",
+    "    if faktor_input is None: return\n",
+    "    tid_input = eval_input(\"Tid (år) (skriv 'x' for ukjent): \")\n",
+    "    if tid_input is None: return\n",
+    "\n",
+    "    # Teller hvor mange ukjente variabler som ble gitt\n",
+    "    ukjente = [var for var in [n_input, g_input, faktor_input, tid_input] if isinstance(var, str) and var.lower() == 'x']\n",
+    "\n",
+    "    if len(ukjente) != 1:\n",
+    "        print(\"Du må skrive 'x' for nøyaktig én av variablene.\")\n",
     "        return\n",
     "\n",
-    "    if valg == '1':\n",
-    "        opprinnelig_verdi = få_input(\"Oppgi opprinnelig verdi: \")\n",
-    "        if opprinnelig_verdi is None:\n",
-    "            return\n",
-    "        vekstfaktor = få_input(\"Oppgi vekstfaktor: \")\n",
-    "        if vekstfaktor is None:\n",
-    "            return\n",
-    "        ny_verdi = beregn_verdi(opprinnelig_verdi, vekstfaktor)\n",
-    "        print(f\"\\nNy verdi = {ny_verdi:.2f}\")\n",
+    "    try:\n",
+    "        vekstfaktor_obj = None # Bruker denne for å lagre vekstfaktoren uavhengig av om den er ukjent eller ikke\n",
     "\n",
-    "    elif valg == '2':\n",
-    "        ny_verdi = få_input(\"Oppgi ny verdi: \")\n",
-    "        if ny_verdi is None:\n",
-    "            return\n",
-    "        vekstfaktor = få_input(\"Oppgi vekstfaktor: \")\n",
-    "        if vekstfaktor is None:\n",
-    "            return\n",
-    "        opprinnelig_verdi = beregn_verdi(None, vekstfaktor, ny_verdi)\n",
-    "        print(f\"\\nOpprinnelig verdi = {opprinnelig_verdi:.2f}\")\n",
+    "        # Prøver å parse input for kjente verdier\n",
+    "        n = float(n_input) if isinstance(n_input, (int, float)) else n_input\n",
+    "        g = float(g_input) if isinstance(g_input, (int, float)) else g_input\n",
+    "        t = float(tid_input) if isinstance(tid_input, (int, float)) else tid_input\n",
     "\n",
-    "    elif valg == '3':\n",
-    "        opprinnelig_verdi = få_input(\"Oppgi opprinnelig verdi: \")\n",
-    "        if opprinnelig_verdi is None:\n",
-    "            return\n",
-    "        ny_verdi = få_input(\"Oppgi ny verdi: \")\n",
-    "        if ny_verdi is None:\n",
-    "            return\n",
-    "        vekstfaktor = beregn_verdi(opprinnelig_verdi, None, ny_verdi)\n",
-    "        prosent_endring = (vekstfaktor - 1) * 100\n",
-    "        print(f\"\\nVekstfaktor = {vekstfaktor:.3f} ({prosent_endring:+.1f} % endring)\")\n",
+    "        if isinstance(faktor_input, (int, float)): # Hvis faktor_input er et kjent tall\n",
+    "            if prosent_eller_vekst == 'p':\n",
+    "                prosent = float(faktor_input)\n",
+    "                vekstfaktor_obj = 1 + prosent / 100 if svar_okning_minking == 'a' else 1 - prosent / 100\n",
+    "            else: # vekstfaktor\n",
+    "                vekstfaktor_obj = float(faktor_input)\n",
+    "        elif isinstance(faktor_input, str) and faktor_input.lower() == 'x': # Riktig sammenligning\n",
+    "            vekstfaktor_obj = 'x' # Angi at vekstfaktor er ukjent\n",
     "\n",
-    "    else:\n",
-    "        print(\"Ugyldig valg. Vennligst start programmet på nytt.\")\n",
+    "        # Løsning basert på hvilken variabel som er 'x'\n",
+    "        if isinstance(n, str) and n.lower() == 'x':\n",
+    "            if vekstfaktor_obj == 'x': # Korrigert: bruk ==\n",
+    "                print(\"Kan ikke løse for ny verdi når vekstfaktor også er ukjent.\")\n",
+    "                return\n",
+    "            n = g * (vekstfaktor_obj ** t)\n",
+    "            print(f\"Ny verdi = {n:.2f}\")\n",
+    "        elif isinstance(g, str) and g.lower() == 'x':\n",
+    "            if vekstfaktor_obj == 'x': # Korrigert: bruk ==\n",
+    "                print(\"Kan ikke løse for opprinnelig verdi når vekstfaktor også er ukjent.\")\n",
+    "                return\n",
+    "            g = n / (vekstfaktor_obj ** t)\n",
+    "            print(f\"Opprinnelig verdi = {g:.2f}\")\n",
+    "        elif isinstance(vekstfaktor_obj, str) and vekstfaktor_obj.lower() == 'x':\n",
+    "            if g == 0:\n",
+    "                print(\"Kan ikke beregne vekstfaktor hvis opprinnelig verdi er null.\")\n",
+    "                return\n",
+    "            vekstfaktor_obj = (n / g) ** (1 / t)\n",
+    "            prosent = (vekstfaktor_obj - 1) * 100 if svar_okning_minking == \"a\" else (1 - vekstfaktor_obj) * 100\n",
+    "            print(f\"Vekstfaktor = {vekstfaktor_obj:.4f} (tilsvarer {prosent:.2f}% {'økning' if svar_okning_minking == 'a' else 'reduksjon'})\")\n",
+    "        elif isinstance(t, str) and t.lower() == 'x':\n",
+    "            if vekstfaktor_obj <= 0 or (n / g) <= 0:\n",
+    "                print(\"Ugyldige verdier for logaritmeberegning (vekstfaktor og/eller forhold må være > 0).\")\n",
+    "                return\n",
+    "            if vekstfaktor_obj == 1:\n",
+    "                print(\"Vekstfaktor på 1 fører ikke til endring over tid, kan ikke beregne tid for endring.\")\n",
+    "                return\n",
+    "            t = math.log(n / g) / math.log(vekstfaktor_obj)\n",
+    "            print(f\"Tid = {t:.2f} år\")\n",
+    "        else:\n",
+    "            print(\"En ukjent feil oppstod. Sørg for å følge instruksjonene.\")\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    hovedprogram()"
+    "    except (ValueError, TypeError, ZeroDivisionError) as e:\n",
+    "        print(f\"Det oppstod en feil med input eller beregning: {e}. Sørg for gyldige numeriske verdier.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"En uventet feil oppstod: {e}\")\n",
+    "\n",
+    "# Start programmet\n",
+    "main()"
    ]
   },
   {
