--- a/Matematikkboka 1IM.ipynb
+++ b/Matematikkboka 1IM.ipynb
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "10ac05cc-c6fb-4936-9c49-07c1810250c2",
    "metadata": {},
    "outputs": [
@@ -541,16 +541,16 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Skriv inn nummeret på det du ønsker å beregne (1, 2, eller 3):  1\n",
-      "Skriv inn prosentverdien:  20\n",
-      "Skriv inn del av hele tallet:  300\n"
+      "Skriv inn nummeret på det du ønsker å beregne (1, 2, eller 3):  3\n",
+      "Skriv inn hele tallet:  200\n",
+      "Skriv inn prosentverdien:  34\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hele tallet er: 1500.00\n",
+      "Del av tallet er: 68.00\n",
       "\n"
      ]
     },
@@ -1134,10 +1134,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7621c57e-e3ab-4b8a-aaef-4425c7f54c57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "📌 Hva slags skattekort bruker du?\n",
+      "1. Frikort\n",
+      "2. Tabellkort\n",
+      "3. Prosentkort\n",
+      "q. Avslutt\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ditt valg:  q\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avslutter programmet.\n"
+     ]
+    }
+   ],
    "source": [
     "# 2 Personlig økonomi: 2.2 Lønn og skatt\n",
     "def eval_input(prompt, allow_exit=False):\n",
@@ -3096,14 +3123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "7f678681-144d-49c7-9ee1-4f6467b6e597",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b05a19f3549b47f8b5cef59a96e4eae3",
+       "model_id": "40156c778fd54339aeb913a6669e1093",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3117,7 +3144,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d9239927fe64332a0c496598e6dd99a",
+       "model_id": "eb8a2d3699464ef283e891eeb7e90541",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3131,7 +3158,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae93af6407bf419d93eeada027d1a473",
+       "model_id": "72d9560ff55a4af6b5f0a410c5320f24",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3145,7 +3172,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c3c6d6ee27746c2a9d32094054a2da7",
+       "model_id": "dd74b0db3bec4ab191ef46dd9e5b26fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3159,7 +3186,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dbd31db57df840c68d12f0903150da4d",
+       "model_id": "6599c4a4a6164c94b4b8aef0a1df17f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3249,14 +3276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bdd49309-a5a7-4747-b2a7-1eede8126b35",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c82148250c8846b4b15ea289112e1f21",
+       "model_id": "4e847a8684af467584e8084be1adc13c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3270,7 +3297,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe33b23d36fc407eb9fe93b8bd3bcced",
+       "model_id": "6212180b88f74705ac95c100587d38bf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3284,7 +3311,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "41be807c44ff4318b3097229836141fa",
+       "model_id": "1abd2af64bae4b3e97eb2953e0638a6e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3298,7 +3325,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c81fc282d8bf47219c28334dbbc0dd3c",
+       "model_id": "ac62d115e53748deacb1c377547d2dcc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3312,7 +3339,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "32461bad5b014df2a30e6f17b3be434e",
+       "model_id": "b9d8f036bac048acb874f707e9c31bd6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3326,7 +3353,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51d554cec27e475fab7844570e34bc46",
+       "model_id": "7d801b06fa094749a057a0707bc690ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3340,7 +3367,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bdc00a990b1b431593b1686a55a1bd40",
+       "model_id": "802f7db06226422688e64afbd0096dcb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3924,14 +3951,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "24360279-666e-4cad-9141-ad36ee902564",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "948163533038437ba21c440d376a3897",
+       "model_id": "0a1e7197f9ce4e02b8d28bba5e24f02d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3944,7 +3971,7 @@
     }
    ],
    "source": [
-    "# Del 1: Forbedret og utvidet kode\n",
+    "# Formlikhetskalkulator\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display, clear_output\n",
     "import matplotlib.pyplot as plt\n",
@@ -4483,14 +4510,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "2182e2f9-ad89-4e17-b212-a186f14b712b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8980b44a442c42c983e01116fa26a5a7",
+       "model_id": "f5a04b7c364c4a578024d416a9d29583",
        "version_major": 2,
        "version_minor": 0
       },
@@ -4714,17 +4741,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cd895a27-673b-46c1-8521-35eb6565ae62",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "7ed278b4-1efc-4b57-ac33-bd7c26df5456",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# $\\color{green}{\\text{Kapittel 4 - Statistikk}}$"
    ]
@@ -5035,7 +5056,9 @@
   {
    "cell_type": "markdown",
    "id": "1199ea16-1315-49b5-ba5c-902e75a2dc7e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# $\\color{red}{\\text{Kapittel 5 - Yrkesøkonomi}}$"
    ]
@@ -5185,10 +5208,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "063f39b9-dc8d-49df-a1f1-794e2831874f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kostnadsoversikt:\n",
+      "Materialkostnader: 460 kr\n",
+      "Lønnskostnader: 3062.5 kr\n",
+      "Indirekte kostnader: 1100 kr\n",
+      "Selvkost: 4622.5 kr\n",
+      "Pris med fortjeneste: 6517.72 kr\n",
+      "Sluttpris inkl. mva: 8147 kr\n"
+     ]
+    }
+   ],
    "source": [
     "# 5 Yrkesøkonomi: 5.3 Priskalkyler\n",
     "# Priskalkyle Oppgave 7.133a:\n",
@@ -5234,10 +5271,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "480237df-573b-4d0b-9eff-d2e888f9822e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Oppgi kostnader – (skriv 'q' for å avslutte):\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Direkte kostnader/Materialkostnader (uten mva.) (feks råvarer):  q\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Avslutter programmet. Takk for at du brukte priskalkulatoren!\n"
+     ]
+    }
+   ],
    "source": [
     "# 5 Yrkesøkonomi: 5.3 Priskalkyler\n",
     "import re\n",
